--- a/index_dev.html
+++ b/index_dev.html
@@ -14370,8 +14370,7 @@ X_{n}
 <img src="https://images.unsplash.com/photo-1540479859555-17af45c78602?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" width="400">
 <figcaption>Analogy for Covariance in Kernel functions</figcaption>
 </center>
-</figure><p>\
-Lets us look at an analogy to covariance in kernel functions:</p>
+</figure><p>Lets us look at an analogy to covariance in kernel functions:</p>
 <p>Assume we have a few children standing side-by-side in a line; and we ask them to move randomly back and forth. We’ll see that each child could be standing wherever he/she desires, unaffected by other children. However, if we do the same experiment with each child, holding the hands of the neighbouring child tightly; it would be observed that the neighbouring children would be standing quite closer to each other in the final configuration.</p>
 <p>The initial set up for the experiment is analogous to a low correlation coefficient while the latter resembles a high correlation coefficient. The kernel function in GP regression is responsible for maintaining the correlation between the random variables and indeed producing better generalisation for the trends.</p>
 
